--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <div class="row">
       <div class="card">
         <img src="img/1.webp" alt="">
+        <span class="discount">-50%</span>
+        <span class="eco-friendly">Sostenibilità</span>
+        <span class="heart">&#9829;</span>
           <div class="img-description">
             <span class="brand">Levi's</span>
             <h3>relaxed fit tee unisex</h3>
@@ -24,20 +27,24 @@
       </div>
       <div class="card">
         <img src="img/2.webp" alt="">
-        <div class="img-description">
-          <span class="brand">Guess</span>
-          <h3>roses tee</h3>
-          <span class="prices">20,99€</span>
-          <span class="sales">29,99€</span>
-        </div>
+        <span class="discount">-30%</span>
+        <span class="heart">&#9829;</span>
+          <div class="img-description">
+            <span class="brand">Guess</span>
+            <h3>roses tee</h3>
+            <span class="prices">20,99€</span>
+            <span class="sales">29,99€</span>
+          </div>
       </div>
       <div class="card">
         <img src="img/3.webp" alt="">
-        <div class="img-description">
-          <span class="brand">Come Zucchero Filato</span>
-          <h3>voglia di colori pastello</h3>
-          <span class="prices">129,99€</span>
-        </div>
+        <span class="discount">-30%</span>
+        <span class="heart">&#9829;</span>
+          <div class="img-description">
+            <span class="brand">Come Zucchero Filato</span>
+            <h3>voglia di colori pastello</h3>
+            <span class="prices">129,99€</span>
+          </div>
       </div>
     </div>
   </div>
