--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <div class="container">
     <div class="row">
       <div class="card">
-        <img src="img/1.webp" alt="">
+        <img class="prima-img" src="img/1.webp" alt="maglietta levi's unisex">
+        <img class="seconda-img" src="img/1b.webp" alt="maglietta levi's unisex">
         <span class="discount">-50%</span>
         <span class="eco-friendly">Sostenibilità</span>
-        <span class="heart">&#9829;</span>
           <div class="img-description">
             <span class="brand">Levi's</span>
             <h3>relaxed fit tee unisex</h3>
@@ -26,9 +26,9 @@
           </div>
       </div>
       <div class="card">
-        <img src="img/2.webp" alt="">
+        <img class="prima-img" src="img/2.webp" alt="maglietta bianca donna">
+        <img class="seconda-img" src="img/2b.webp" alt="maglietta bianca donna">
         <span class="discount">-30%</span>
-        <span class="heart">&#9829;</span>
           <div class="img-description">
             <span class="brand">Guess</span>
             <h3>roses tee</h3>
@@ -37,15 +37,50 @@
           </div>
       </div>
       <div class="card">
-        <img src="img/3.webp" alt="">
+        <img class="prima-img" src="img/3.webp" alt="completo verde donna">
+        <img class="seconda-img" src="img/3b.webp" alt="completo verde donna">
         <span class="discount">-30%</span>
-        <span class="heart">&#9829;</span>
           <div class="img-description">
             <span class="brand">Come Zucchero Filato</span>
             <h3>voglia di colori pastello</h3>
             <span class="prices">129,99€</span>
           </div>
       </div>
+      
+    </div>
+    <div class="row">
+      <div class="card">
+        <img class="prima-img" src="img/4.webp" alt="maglietta levi's">
+        <img class="seconda-img" src="img/4b.webp" alt="maglietta levi's">
+        <span class="discount">-50%</span>
+        <span class="eco-friendly">Sostenibilità</span>
+          <div class="img-description">
+            <span class="brand">Levi's</span>
+            <h3>tee unisex</h3>
+            <span class="prices">14,99€</span>
+            <span class="sales">29,99€</span>
+          </div>
+      </div>
+      <div class="card">
+        <img class="prima-img" src="img/5.webp" alt="vestito lungo donna">
+        <img class="seconda-img" src="img/5b.webp" alt="vestito lungo donna">
+          <div class="img-description">
+            <span class="brand">Maya Deluxe</span>
+            <h3>stripe bodice</h3>
+            <span class="prices">99,99€</span>
+          </div>
+      </div>
+      <div class="card">
+        <img class="prima-img" src="img/6.webp" alt="maglione donna">
+        <img class="seconda-img" src="img/6b.webp" alt="maglione donna">
+        <span class="eco-friendly">Sostenibilità</span>
+          <div class="img-description">
+            <span class="brand">Esprit</span>
+            <h3>maglione - black</h3>
+            <span class="prices">29,99€</span>
+          </div>
+      </div>
+      
     </div>
   </div>
   
